<resources>
    <string name="app_name">Prototype</string>
    <string name="b_recipes">Recipes</string>
    <string name="b_planner">Planner</string>
    <string name="b_shop">Shopping Lists</string>
    <string name="title_activity_recipe_list">RecipeList</string>
    <string name="bu_del_rec">X</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="input_nxt_ing">Ingredient...</string>
    <string name="cookbook_add">Add Recipe!</string>
    <string name="input_ing">Ingredient</string>
    <string name="input_ing_amt">Amount</string>
    <string name="clear_ing_line">X</string>
    <string name="input_namofrecipe">Name of Recipe</string>
    <string name="input_clear_all">Clear All</string>
    <string-array name="weights">
        <item>cup</item>
        <item>tsp</item>
        <item>lbs</item>
        <item>kg</item>
        <item>g</item>
        <item>oz</item>

    </string-array>
</resources>
